# gomonorepo

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  bazel-gomonorepo  deps.bzl  go.mod  readme.md
services/member_service/: BUILD.bazel  main.go
shared/models/: BUILD.bazel  member.go
