# shared/models/BUILD
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = ["member.go"],
    importpath = "github.com/AlvaroG13191704/gomonorepo/shared/models",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":models",
    visibility = ["//visibility:public"],
)
